--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 </div>
                 
 
-                        <img class="imagen1" src="image1.jpg" alt="imagenpersonal">   </section>
+                        <img class="imagen1" src="image2.jpg" alt="imagenpersonal">   </section>
 
-                        <section class="seccion-2"><img class="imagen3" src="imagen2.jpg" alt="imagendecarrusel"></section>
+                        <section class="seccion-2"><img class="imagen3" src="imagen|.jpg" alt="imagendecarrusel"></section>
                     </main>
    
            </div>
