--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                         <img class="imagen1" src="image2.jpg" alt="imagenpersonal">   </section>
 
-                        <section class="seccion-2"><img class="imagen3" src="imagen|.jpg" alt="imagendecarrusel"></section>
+                        <section class="seccion-2"><img class="imagen3" src="imagen1.jpg" alt="imagendecarrusel"></section>
                     </main>
    
            </div>
